--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/evolo-at/afd-to-markdown"
+    "url": "git+https://github.com/evolo-at/afd-to-markdown.git"
   }
 }
